parser/tests/parser/complex/invalid/basic_1.mf2
.foo $bar = {:hello}
{{}}
=== spans ===
                    .foo $bar = {:hello}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                            ^^^^ 1:0-1:4
Pattern                                       0:0-0:0
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..20)
  .foo $bar = {:hello}↵{{}}
  ^^^^^^^^^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..25,
    declarations: [],
    body: QuotedPattern {
        span: @21..25,
        pattern: Pattern {
            parts: [],
        },
    },
}